# epr-api

./: CHANGELOG.txt  CMakeLists.txt  ISSUES.txt  LICENSE.txt  README-DEV.txt  README.txt  VERSION.txt  build.xml  makefile  test.sh
.github/workflows/: cmake-multi-platform.yml
bccunit/: CMakeLists.txt
bccunit/src/: CMakeLists.txt  bccunit.c  bccunit.h  bccunit_test.c
docs/: CMakeLists.txt  Doxyfile.txt  doxygen_main_content.html  footer.html  header.html
docs/epr_c_api/: annotated.html  classes.html  custom.css  epr__api_8h.html  epr__api_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__BM.html  group__CFE.html  group__DA.html  group__DATASET.html  group__ERROR.html  group__FA.html  group__FAEA.html  group__FSEA.html  group__GDA.html  group__INIT.html  group__IO.html  group__LOGGING.html  group__ProductIO.html  group__RASTER.html  group__REC.html  group__SPA.html  group__UTILS.html  group__WtFoSO.html  index.html  modules.html  structEPR__BandId.html  structEPR__DSD.html  structEPR__DatasetId.html  structEPR__DatasetRef.html  structEPR__Field.html  structEPR__FlagDef.html  (+4 more)
prj/unix/: cc_make_examples.sh  gcc_make_examples.sh
prj/unix/tests/: cc_make_api_tests.sh  cc_make_api_unit_tests.sh  cc_make_epr_main_test.sh  gcc_make_api_tests.sh  gcc_make_api_unit_tests.sh  gcc_make_epr_main_test.sh  write_bands_test.sh
prj/win__code_blocks/: epr.workspace  epr_all.workspace
prj/win__code_blocks/api_tests/: api_tests.bmarks  api_tests.cbp  api_tests.layout
prj/win__code_blocks/api_unit_tests/: api_unit_tests.bmarks  api_unit_tests.cbp  api_unit_tests.layout
prj/win__code_blocks/bccunit_lib/: bccunit_lib.bmarks  bccunit_lib.cbp  bccunit_lib.layout
prj/win__code_blocks/epr_api/: epr_api.bmarks  epr_api.cbp  epr_api.layout
prj/win__code_blocks/epr_main_test/: epr_main_test.bmarks  epr_main_test.cbp  epr_main_test.layout
prj/win__code_blocks/epr_subset_test/: epr_subset_test.bmarks  epr_subset_test.cbp  epr_subset_test.layout
prj/win__code_blocks/epr_test_endian/: epr_test_endian.bmarks  epr_test_endian.cbp  epr_test_endian.layout
prj/win__code_blocks/swap_eo/: swap_eo.bmarks  swap_eo.cbp  swap_eo.layout
prj/win__code_blocks/write_bands/: write_bands.bmarks  write_bands.cbp  write_bands.layout
prj/win__code_blocks/write_bitmask/: write_bitmask.bmarks  write_bitmask.cbp  write_bitmask.layout
prj/win__code_blocks/write_ndvi/: write_ndvi.bmarks  write_ndvi.cbp  write_ndvi.layout
prj/win__code_blocks/write_rgb/: write_rgb.bmarks  write_rgb.cbp  write_rgb.layout
src/: CMakeLists.txt  epr_api.c  epr_api.def  epr_api.exported  epr_api.h  epr_api.unexported  epr_api.ver  epr_band.c  epr_band.h  epr_bitmask.c  epr_bitmask.h  epr_core.c  epr_core.h  epr_dataset.c  epr_dataset.h  epr_dddb.c  epr_dddb.h  epr_dsd.c  epr_dsd.h  epr_dump.c  epr_field.c  epr_field.h  epr_msph.c  epr_msph.h  epr_param.c  epr_param.h  epr_product.c  epr_ptrarray.c  epr_ptrarray.h  epr_record.c  epr_record.h  epr_string.c  epr_swap.c  epr_swap.h  epr_typconv.c
src/api-test/: CMakeLists.txt  api_tests.c
src/examples/: tiff.h  tiffio.h  write_bands.c  write_bitmask.c  write_ndvi.c  write_rgb.c
src/test/: CMakeLists.txt  api_unit_tests.c  epr_main_test.c  epr_performance_test.c  epr_subset_test.c  epr_test_endian.c
src/utils/: swpeo.c  test.txt
